added a bit to the google maps part of the readme